// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputV2 should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

.css-pgps27-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 16px;
}

.css-but4ak {
  vertical-align: middle;
  fill: #b3144d;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-but4ak .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.css-vdlwt8-StyledText {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rk:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="true"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="true"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":rk:"
          type="text"
          value="test"
        />
        <div
          class="css-pgps27-Stack-StateStack e7tir8v4"
        >
          <svg
            class="css-but4ak e1gt4cfo0"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 2.764a5.236 5.236 0 1 0 0 10.472A5.236 5.236 0 0 0 8 2.764M1.6 8a6.4 6.4 0 1 1 12.8 0A6.4 6.4 0 0 1 1.6 8M8 5.48c.321 0 .582.26.582.582v2.424a.582.582 0 0 1-1.164 0V6.061c0-.322.26-.582.582-.582m-.582 4.945c0-.321.26-.581.582-.581h.005c.321 0 .582.26.582.581v.005c0 .322-.26.582-.582.582H8a.58.58 0 0 1-.582-.582z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="css-vdlwt8-StyledText e13y3mga0"
    >
      success
    </p>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

.css-pgps27-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 16px;
}

.css-13bmd45 {
  vertical-align: middle;
  fill: #22674e;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-13bmd45 .fillStroke {
  stroke: #22674e;
  fill: none;
}

.css-1n7fwv3-StyledText {
  color: #22674e;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rg:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="true"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":rg:"
          type="text"
          value="test"
        />
        <div
          class="css-pgps27-Stack-StateStack e7tir8v4"
        >
          <svg
            class="css-13bmd45 e1gt4cfo0"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 2.764a5.236 5.236 0 1 0 0 10.472A5.236 5.236 0 0 0 8 2.764M1.6 8a6.4 6.4 0 1 1 12.8 0A6.4 6.4 0 0 1 1.6 8m8.678-1.928c.261.187.322.55.135.812l-2.424 3.394a.582.582 0 0 1-.885.073L5.649 8.896a.582.582 0 1 1 .823-.822l.969.968 2.025-2.835a.58.58 0 0 1 .812-.135"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="css-1n7fwv3-StyledText e13y3mga0"
    >
      success
    </p>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input is disabled 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":ra:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="true"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          disabled=""
          id=":ra:"
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rd:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="true"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":rd:"
          readonly=""
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly with basic props 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":r0:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":r0:"
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
